finished implementing cachedDbStorage